--- a/HomeBudget.Api/appsettings.json
+++ b/HomeBudget.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:home-budget-server.database.windows.net,1433;Initial Catalog=homeBudgetDb;Persist Security Info=False;User ID=HbAdmin;Password=ABP2mrrt060md2a3xx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=tcp:home-budget-server.database.windows.net,1433;Initial Catalog=homeBudgetDb;Persist Security Info=False;User ID=HbAdmin;Password=ABP2mrrt060md2a3xx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=HomeBudgetApp;Trusted_Connection=True;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
