Podpięcie biblioteki Common.

--- a/HomeBudget.Api/HomeBudget.Api.csproj
+++ b/HomeBudget.Api/HomeBudget.Api.csproj
@@ -14,8 +14,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeBudget.Common\HomeBudget.Common.csproj" />
   </ItemGroup>
 
 </Project>
