Wydzielenie kontrolek logowania i rejestracji w karuzeli głównego widoku. Refaktoryzacja. Czyszczenie.

--- a/HomeBudget.App/HomeBudget.App.csproj
+++ b/HomeBudget.App/HomeBudget.App.csproj
@@ -132,6 +132,12 @@
 	  <MauiXaml Update="Views\ContentViews\FullViews\ManageCurrentBudgetAndroidPageView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\ContentViews\Main\LoginContentView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ContentViews\Main\RegisterContentView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Widgets\ManageFastBalanceAndroidPageView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -223,9 +229,6 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\PasswordReminderPageAndroidView.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Views\RegisterPageAndroidView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ReportsPageAndroidView.xaml">
