--- a/HomeBudget.App/HomeBudget.App.csproj
+++ b/HomeBudget.App/HomeBudget.App.csproj
@@ -71,6 +71,8 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.91" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.91" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+		<PackageReference Include="Syncfusion.Maui.DataGrid" Version="27.2.2" />
+		<PackageReference Include="Syncfusion.Maui.ListView" Version="27.2.2" />
 	</ItemGroup>
 
 	<ItemGroup>
